--- a/styles.css
+++ b/styles.css
@@ -36,7 +36,7 @@ header .subtitle {
   width: 100%;
   max-width: 960px;
   margin: auto;
-
+  margin-top: 30px;
 }
 .column-half {
   flex-grow: 1.0;
