--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,13 @@ replay-web-page {
   font-size: 24px;
   text-align: center;
 }
+h2.title {
+  font-size: 24px;
+}
+
+h2 {
+  font-size: 18px;
+}
 header .title {
   font-size: 24px;
 }
@@ -30,20 +37,17 @@ header .subtitle {
 .center {
   text-align: center;
 }
-.flex-col {
+article {
   display: flex;
   flex-direction: row;
-  width: 100%;
-  max-width: 960px;
-  margin: auto;
-  margin-top: 30px;
-}
-.column-half {
-  flex-grow: 1.0;
-  width: 50%;
   text-align: center;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-article {
+.entry {
+  flex-grow: 1.0;
+  max-width: 400px;
   text-align: center;
 }
 .proj img {
