--- a/templates/proj-template.html
+++ b/templates/proj-template.html
@@ -2,25 +2,29 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/replaywebpage@1.0.2/ui.js"></script>
-    <link href="./styles.css" rel="stylesheet"/>
+    <link href="./assets/styles.css" rel="stylesheet"/>
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <header>
       <a class="back-link" href="/"><img class="back" src="/assets/left-arrow.svg"/></a>
       <div class="heading">
-        <div class="title">Black Quotidian</div>
+        <div class="title">{{ project.title }}</div>
         <span class="subtitle">Web Archive</span>
       </div>
       <span class="logo"><img src="/assets/sup_logo.svg"></span>
     </header>
     <replay-web-page
-      coll="bq"
-      config='{"fuzzy": [["(https?://.+)[?]path=.*", "$1"], ["(https?://.+)\\.\\d+", "$1"]]}'
+      coll="{{ project.embed.id }}"
+      {% if project.embed.config %}
+      config='{{ project.embed.config | tojson }}'
+      {% endif %}
+      {% if project.embed.deepLink %}
       deepLink="true"
-      source="https://dh-preserve.sfo2.cdn.digitaloceanspaces.com/webarchives/sup/bq.wacz"
-      url="http://blackquotidian.supdigital.org/bq/overview"
-      ts="20200718001012">
+      {% endif %}
+      source="{{ project.embed.sourceUrl }}"
+      url="{{ project.embed.url }}"
+      ts="{{ project.embed.ts }}">
     </replay-web-page>
   </body>
 </html>
