update to 1.1.0-beta.1, remove unused

--- a/templates/proj-template.html
+++ b/templates/proj-template.html
@@ -15,6 +15,7 @@
       <span class="logo"><img src="/assets/sup_logo.svg"></span>
     </header>
     <replay-web-page
+      embed="replayonly"
       coll="{{ project.embed.id }}"
       {% if project.embed.config %}
       config='{{ project.embed.config | tojson }}'
