support relative paths update to replayweb.page 1.1.0 use new "page:0" to reference starting page

--- a/templates/index-template.html
+++ b/templates/index-template.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header>
-      <span class="logo"><img src="/assets/sup_logo.svg"></span>
+      <span class="logo"><img src="./assets/sup_logo.svg"></span>
     </header>
 
     <h1 class="title center">Stanford Digital Publication Web Archives</h1>
@@ -14,7 +14,7 @@
     <article>
     {% for project in projects %}
       <div class="entry">
-        <a href="/{{ project.filename }}">
+        <a href="./{{ project.filename }}">
         <h2 class="center">{{ project.title }}</h2>
         <span class="proj"><img src="{{ project.thumbUrl }}"></span>
         </a>
