--- a/templates/proj-template.html
+++ b/templates/proj-template.html
@@ -7,23 +7,24 @@
   </head>
   <body>
     <header>
-      <a class="back-link" href="/"><img class="back" src="/assets/left-arrow.svg"/></a>
+      <a class="back-link" href="./"><img class="back" src="./assets/left-arrow.svg"/></a>
       <div class="heading">
         <div class="title">{{ project.title }}</div>
         <span class="subtitle">Web Archive{{ ' with Text Search' if project.hasText else '' }}</span>
       </div>
-      <span class="logo"><img src="/assets/sup_logo.svg"></span>
+      <span class="logo"><img src="./assets/sup_logo.svg"></span>
     </header>
     <replay-web-page
       coll="{{ project.embed.id }}"
       {% if project.embed.config %}
       config='{{ project.embed.config | tojson }}'
       {% endif %}
+      replayBase="./replay/"
       {% if project.embed.deepLink %}
       deepLink="true"
       {% endif %}
       source="{{ project.embed.sourceUrl }}"
-      url="{{ project.embed.url }}"
+      url="page:0"
       ts="{{ project.embed.ts }}">
     </replay-web-page>
   </body>
