add noSandbox to disable sandbox on iframe to support PDFs

--- a/templates/proj-template.html
+++ b/templates/proj-template.html
@@ -23,6 +23,7 @@
       {% if project.embed.deepLink %}
       deepLink="true"
       {% endif %}
+      noSandbox="true"
       source="{{ project.embed.sourceUrl }}"
       url="page:0"
       ts="{{ project.embed.ts }}">
