tcd: add liveRedirectOnNotFound option, switch to 1.4.3-beta.0

--- a/templates/proj-template.html
+++ b/templates/proj-template.html
@@ -25,6 +25,7 @@
       {% endif %}
       noSandbox="true"
       source="{{ project.embed.sourceUrl }}"
+      liveRedirectOnNotFound="true"
       url="page:0"
       ts="{{ project.embed.ts }}">
     </replay-web-page>
