update templates, add assets from existing sup site add liveRedirectOnNotFound to all projects

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -21,18 +21,31 @@ h2 {
   font-size: 18px;
 }
 header .title {
-  font-size: 24px;
+  font-size: 28px;
 }
 header .subtitle {
   font-size: 16px;
   padding: 0.5em 0 1.0em 0;
 }
-.logo {
+header .author {
+  font-size: 20px;
+  font-style: italic;
+}
+.container {
+    display: inline-flex;
+    float: right;
+}
+.colophon {
   float: right;
+  line-height: 3.2em;
+}
+.logo {
+  justify-content: flex-end;
+  margin-left: auto;
   line-height: 2.2em;
 }
 .logo img {
-  height: 9px;
+  height: 11px;
 }
 .center {
   text-align: center;
